Add user list and user statistics
